# AstraLink

./: .env.example  .gitignore  alembic.ini  pyproject.toml
AstraLink/: .env.example  .gitignore  README.md  pyproject.toml
AstraLink/.github/workflows/: flutter-build.yml  release-publish.yml
AstraLink/alembic/: env.py
AstraLink/alembic/versions/: 20260309_000001_initial_schema.py
AstraLink/app/: main.py
AstraLink/app/api/: deps.py
AstraLink/app/core/: config.py  database.py  migrations.py  security.py
AstraLink/app/models/: chat.py  customization.py  social.py  user.py
AstraLink/app/realtime/: fanout.py  manager.py
AstraLink/app/schemas/: auth.py  chat.py  customization.py  social.py  user.py
AstraLink/app/services/: auth_service.py  chat_service.py  customization_service.py  media_service.py  social_service.py  user_service.py
AstraLink/astralink.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AstraLink/astralink_app/: pubspec.yaml
AstraLink/astralink_app/lib/: main.dart
AstraLink/astralink_app/linux/: CMakeLists.txt
AstraLink/astralink_app/test/: app_preferences_store_test.dart  chat_drafts_local_cache_test.dart  (+2 more)
AstraLink/deploy/: github-secrets.md
AstraLink/docs/: architecture_review.md  architecture_review_ru.md  client_architecture.md  telegram_rewrite_plan.md
AstraLink/releases/: manifest.json
AstraLink/scripts/: build_android.ps1  build_windows.ps1  create_release_tag.ps1  gen_nopass_key.cmd  register_windows_protocol.ps1  seed_demo.py  update_manifest.py
AstraLink/tests/: conftest.py  test_api.py
AstraLink/web/: index.html
(+112 files in other folders)
